Fixing browser bar that covers header

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -252,6 +252,7 @@ html {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  height: stretch;
 }
 // Color del texto seleccioando
 ::selection {
@@ -270,6 +271,10 @@ body {
   width: 100%;
   word-break: normal;
   overflow-wrap: anywhere;
+  // Prevenir que la barra del navegador tape el nav-bar de la app
+  // min-height: 100vh; /* Fallback for non-WebKit browsers */
+  // min-height: -webkit-fill-available; /* For WebKit browsers */
+  height: stretch; /* Modern, standardized approach */
 }
 // Scroll hasta encabezados
 h1, h2, h3, h4, h5, h6 {
@@ -538,7 +543,6 @@ main img {
 /* Guías de reorden (evita conflictos con .list-group-item de Bootstrap) */
 /*! purgecss start ignore */
 .app-guide-top { 
-  /* purgecss ignore current */
   box-shadow: inset 0 3px 0 $body-color-subtle-5; 
   // border-top-color: $body-color-subtle-5;
 }
@@ -547,3 +551,7 @@ main img {
   // border-bottom-color: $body-color-subtle-5;
 }
 /*! purgecss end ignore */
+.app-dvh-100 {
+  /*! purgecss ignore current */
+  min-height: 100dvh;   /* Chrome/Edge/Safari modernos */
+}
